--- a/index.html
+++ b/index.html
@@ -466,13 +466,13 @@
                                     <div class="col-9 col-xl-4">
                                         <div class="portfolio-img">
                                             <div class="portfolio-img-inner">
-                                                <img src="img/Portfolio-1.jpg" class="img-fluid" alt="Image">
+                                                <img src="img/lingo.png" class="img-fluid" alt="Image">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-3 col-xl-2">
                                         <div class="view-img">
-                                            <a class="btn btn-light btn-md-square me-3" href="https://github.com/Zeroprem/duolingo-clone"><i class="fas fa-plus"></i></a>
+                                            <a class="btn btn-light btn-md-square me-3" href="https://duolingo-clone-eta.vercel.app/"><i class="fas fa-plus"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -486,7 +486,7 @@
                                     <div class="col-9 col-xl-4">
                                         <div class="portfolio-img">
                                             <div class="portfolio-img-inner">
-                                                <img src="img/portfolio-2.jpg" class="img-fluid" alt="Image">
+                                                <img src="img/passop.png" class="img-fluid" alt="Image">
                                             </div>
                                         </div>
                                     </div>
@@ -500,19 +500,19 @@
                             <div class="portfolio-item py-5 wow fadeInUp" data-wow-delay="0.5s">
                                 <div class="row g-4 align-items-center">
                                     <div class="col-xl-6">
-                                        <h4 class="text-body">AL and ML</h4>
-                                        <h1 class="display-6 mb-0">Text Summarization using NLP</h1>
+                                        <h4 class="text-body">Web Design</h4>
+                                        <h1 class="display-6 mb-0">Amrutam</h1>
                                     </div>
                                     <div class="col-9 col-xl-4">
                                         <div class="portfolio-img">
                                             <div class="portfolio-img-inner">
-                                                <img src="img/portfolio-3.jpg" class="img-fluid" alt="Image">
+                                                <img src="img/amrutam.png" class="img-fluid" alt="Image">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-3 col-xl-2">
                                         <div class="view-img">
-                                            <a class="btn btn-light btn-md-square me-3" href="https://passoppro.vercel.app/"><i class="fas fa-plus"></i></a>
+                                            <a class="btn btn-light btn-md-square me-3" href="https://amrutam-two.vercel.app/doctor"><i class="fas fa-plus"></i></a>
                                         </div>
                                     </div>
                                 </div>
