Update resume bug index.html

--- a/index.html
+++ b/index.html
@@ -154,11 +154,13 @@
                                             <p class="mb-0"><strong class="fw-bold text-dark">Open for JOB :</strong> Available</p>
                                         </div>
                                     </div>
-                                    <a href="/reusmes.pdf" target="_blank" class="btn btn-primary py-2 px-4">
-                                        <i class="fas fa-eye me-2"></i>View My Resume
-                                    </a>
-                                    <a href="/reusmes.pdf" download="resume.pdf" class="btn btn-primary py-2 px-4"> <i class="fas fa-download me-2"></i>Download My CV</a>
-                                    
+                                   <a href="/PremchandTarange/reusmes.pdf" target="_blank" class="btn btn-primary py-2 px-4">
+    <i class="fas fa-eye me-2"></i>View My Resume
+</a>
+<a href="/PremchandTarange/reusmes.pdf" download="resume.pdf" class="btn btn-primary py-2 px-4">
+    <i class="fas fa-download me-2"></i>Download My CV
+</a>
+
                                 </div>
                                 
                             </div>
