--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             </a>
                             <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.3s">
                                 <p class="text-white sub-title">👋 Hello I'm Premchand</p>
-                                <h1 class="display-6 text-white mb-0">Java Full Stack Developer Based in India</h1>
+                                <h1 class="display-6 text-white mb-0">Java Full Stack Developer</h1>
                             </div>
                         </div>
                     </div>
