--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <div class="about-header bg-dark h-100 pt-6 pe-6 pb-6">
                             <div class="text-start d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.1s">
                                 <p class="text-white sub-title">About Me</p>
-                                <h1 class="display-6 text-white mb-0">Java Full Stack Developer Based in India since 2024</h1>
+                                <h1 class="display-6 text-white mb-0">Java Full Stack Developer</h1>
                             </div>
                         </div>
                     </div>
@@ -139,7 +139,7 @@
                                     </div>
                                 </div>
                                 <div class="col-xl-7 wow fadeInUp" data-wow-delay="0.3s">
-                                    <h4 class="mb-4">Hello, I'm Premchand, Based in India</h4>
+                                    <h4 class="mb-4">Hello, I'm Premchand</h4>
                                     <p class="mb-4">A passionate Java Full Stack Developer with a solid foundation in modern web technologies, including React.js, Next.js, Spring Boot, and MySQL. Proficient in designing and building responsive, user-centric applications with a focus on performance and scalability. Proven problem-solver with hands-on experience in full-stack development and a strong enthusiasm for learning and growth in the tech industry.
                                     </p>
                                     <div class="row g-4 mb-4">
