--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
     <head>
         <meta charset="utf-8">
+        
         <title>Premchand Tarange</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
@@ -129,7 +130,7 @@
                             <div class="row g-5">
                                 <div class="col-xl-5">
                                     <div class="about-img bg-light p-4 wow fadeInUp" data-wow-delay="0.1s">
-                                        <img src="img/about.jpg" class="img-fluid w-100" alt="Image">
+                                        <img src="img/portfolio-2.jpg" class="img-fluid w-100" alt="Image">
                                         <div class="sosial-icon">
                                             <a class="btn btn-primary btn-sm-square mb-3" href="#"><i class="fab fa-facebook-f text-white"></i></a>
                                             <a class="btn btn-primary btn-sm-square mb-3" href="#"><i class="fab fa-twitter text-white"></i></a>
