--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <div class="col-12 col-lg-9">
                         <div class="about-content h-100 pt-6 ps-6 pb-6">
                             <div class="row g-5">
-                                <div class="col-xl-5">
+<!--                                 <div class="col-xl-5">
                                     <div class="about-img bg-light p-4 wow fadeInUp" data-wow-delay="0.1s">
                                         <img src="img/blog-3.jpg" class="img-fluid w-100" alt="Image">
                                         <div class="sosial-icon">
@@ -138,7 +138,7 @@
                                             <a class="btn btn-primary btn-sm-square mb-0" href="#"><i class="fab fa-linkedin-in text-white"></i></a>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="col-xl-7 wow fadeInUp" data-wow-delay="0.3s">
                                     <h4 class="mb-4">Hello, I'm Premchand</h4>
                                     <p class="mb-4">A passionate Java Full Stack Developer with a solid foundation in modern web technologies, including React.js, Next.js, Spring Boot, and MySQL. Proficient in designing and building responsive, user-centric applications with a focus on performance and scalability. Proven problem-solver with hands-on experience in full-stack development and a strong enthusiasm for learning and growth in the tech industry.
